# notion-clear-trash

./: .pre-commit-config.yaml  README.md  main.py  notion_clear_trash.py  setup.cfg
