[metadata]
name = notion_clear_trash
version = 0.1.0
description = Script to clear the notion's trash.
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas Hirtz
author_email = thomashirtz@pm.me
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
install_requires =
    notion==0.0.28

[options.entry_points]
console_scripts =
    notion-clear-trash = notion_clear_trash:main
